# cmake_learn

./: README.md
2/: CMakeLists.txt  main
2/src/: swap.cpp
3/: CMakeLists.txt  mainrun
3/include/: Soldier.h
3/src/: Soldier.cpp
7/: main.cpp
7/include/: Gun.h
7/src/: Gun.cpp  Soldier.cpp
swap/: main.cpp
swap/include/: swap.h
vs_project/: CMakeLists.txt  helloworld  helloworld.cpp
